# Forged-In-Shadow-Torch-Save-Point-Teleport-Mod

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
scripts/: main.lua  map_overlay_demo.html  map_overlay_drag.html
src/: App.vue  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: gamepad.rs  main.rs  window_control.rs
src/components/: MapBoard.vue  MapSelector.vue
src/config/: in_game_points.json
src/hooks/: useGamepadNavigation.js  useOpacityControl.js
