[package]
name = "Forged-In-Shadow-Torch-Save-Point-Teleport-Mod"
version = "0.1.0"
description = "Desktop viewer for Forged In Shadow Torch teleport markers"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2.0.0", features = ["wry"] }
tauri-plugin-global-shortcut = "2.3.0"
[target."cfg(windows)".dependencies]
gilrs = { version = "0.10.3", default-features = false, features = ["xinput"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

